CHOMP is working fine. Needs more modification to be efficient for trainning purpose

--- a/moveit_config/CMakeLists.txt
+++ b/moveit_config/CMakeLists.txt
@@ -4,19 +4,20 @@ project(moveit_config)
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(my_chomp_motion_planner REQUIRED)
 find_package(moveit_core REQUIRED)
 find_package(moveit_ros_planning REQUIRED)
-find_package(moveit_ros_planning_interface REQUIRED)
-find_package(moveit_visual_tools REQUIRED)
 find_package(geometric_shapes REQUIRED)
 find_package(tf2_eigen REQUIRED)
 find_package(Eigen3 REQUIRED)
-
 
 include_directories(
                     include
                     ${EIGEN3_INCLUDE_DIRS}
                   )
+
+include_directories(${my_chomp_motion_planner_INCLUDE_DIRS})
+
 
 ## Robot Description Package
 set(ROBOT_DESCRIPTION_PKG ur_description)
@@ -26,21 +27,21 @@ find_package(${ROBOT_DESCRIPTION_PKG} REQUIRED)
 add_executable(chomp_planning src/chomp_planning_node.cpp)
 
 target_include_directories(chomp_planning PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>)
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>
+  ${my_chomp_motion_planner_INCLUDE_DIRS}
+  )
 
 
     
 ament_target_dependencies(chomp_planning
-                            rclcpp
-                            moveit_core
-                            moveit_ros_planning
-                            moveit_ros_planning_interface
-                            moveit_visual_tools
-                            geometric_shapes
-                            tf2_eigen
-                            Python3
-                          )
+      rclcpp
+      my_chomp_motion_planner
+      moveit_core
+      moveit_ros_planning
+      geometric_shapes
+      tf2_eigen
+    )
 
 install(TARGETS chomp_planning
           DESTINATION lib/${PROJECT_NAME})
