--- a/moveit_config/package.xml
+++ b/moveit_config/package.xml
@@ -1,19 +1,17 @@
-<?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>moveit_config</name>
-  <version>0.0.0</version>
-  <description>Provide neccessary configurations to set up MoveIt</description>
-  <maintainer email="Hadi.Hajieghrary@Gmail.Com">hadi</maintainer>
-  <license>None</license>
-
-  <buildtool_depend>ament_cmake</buildtool_depend>
-
-  <!-- Robot Description Package -->
-  <depend>ur_description</depend>
-
-
-  <export>
-    <build_type>ament_cmake</build_type>
-  </export>
+<name>moveit_config</name>
+<version>0.0.0</version>
+<description>Provide neccessary configurations to set up MoveIt</description>
+<maintainer email="Hadi.Hajieghrary@Gmail.Com">hadi</maintainer>
+<license>None</license>
+<buildtool_depend>ament_cmake</buildtool_depend>
+<!--  Robot Description Package  -->
+<depend>ur_description</depend>
+<depend>my_chomp_motion_planner</depend>
+<depend>moveit_core</depend>
+<depend>rclcpp</depend>
+<export>
+<build_type>ament_cmake</build_type>
+</export>
 </package>
