--- a/my_chomp_motion_planner/package.xml
+++ b/my_chomp_motion_planner/package.xml
@@ -20,6 +20,7 @@
   <depend>moveit_core</depend>
   <depend>rclcpp</depend>
   <depend>trajectory_msgs</depend>
+  <depend>moveit_ros_planning_interface</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
